tests/integration/snapshots/integration_suite__integration__bits_2_bits__std06_general.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.stdm"

meta {
    unknown: 0,
    stage_name: "   Scarlet is a nice color",
    bgm: [
        {
            path: "bgm/th06_06.mid",
            name: "   BGM: Cool Beans ~ Coffee and Steakhouse",
        },
        {
            path: "bgm/th06_07.mid",
            name: "                  BGM: Okay but why are you wearing my pants?",
        },
        {path: " ", name: " "},
        {path: " ", name: " "},
    ],
    objects: {
        object0: {
            unknown: 0,
            pos: [-64.0, -32.0, 0.0],
            size: [480.0, 288.0, 0.0],
            quads: [
                rect {
                    anm_script: 0,
                    pos: [-32.0, 0.0, 0.0],
                    size: [64.0, 64.0],
                },
                rect {anm_script: 0, pos: [32.0, 0.0, 0.0], size: [64.0, 64.0]},
                rect {anm_script: 0, pos: [96.0, 0.0, 0.0], size: [64.0, 64.0]},
            ],
        },
        object1: {
            unknown: 2,
            pos: [-64.0, -32.0, 0.0],
            size: [480.0, 288.0, 0.0],
            quads: [
                rect {
                    anm_script: 1,
                    pos: [-32.0, 0.0, 0.0],
                    size: [64.0, 64.0],
                },
            ],
        },
        object2: {
            unknown: 2,
            pos: [-64.0, -32.0, 0.0],
            size: [480.0, 288.0, 0.0],
            quads: [
                rect {
                    anm_script: 2,
                    pos: [-32.0, 0.0, 0.0],
                    size: [64.0, 64.0],
                },
            ],
        },
    },
    instances: [
        object0 {pos: [0.0, -4184.0, 0.0]},
        object1 {pos: [0.0, -3928.0, 0.0]},
        object2 {pos: [0.0, -3672.0, 0.0]},
        object1 {pos: [128.0, 72.0, -500.0]},
        object1 {pos: [160.0, 88.0, -350.0]},
    ],
}


script main {
    fog(0xffc8a880, 400.0, 900.0);
    facing(0.0, 600.0, 0.75);
    posKeyframe(0.0, 0.0, 110.0);
+980: // 980
    posKeyframe(0.0, -200.0, 110.0);
+30: // 1010
    posKeyframe(0.0, -215.0, 110.0);
-1:
    posKeyframe(0.0, -5460.0, 210.0);
}

